# try-whisper

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: download_model.py  setup_project.sh  setup_whisper_cpp.sh
src/try_whisper/: __init__.py  audio.py  cli.py  config.py  ring_buffer.py  transcriber.py  whisper_cpp.py
tests/: test_ring_buffer.py
