[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "try-whisper"
version = "0.1.0"
description = "Real-time speech recognition CLI built on whisper.cpp"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "VB", email = "dev@example.com"}]
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4",
    "webrtcvad>=2.0.10",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
try-whisper = "try_whisper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
